--- a/style1.css
+++ b/style1.css
@@ -174,7 +174,7 @@ hr {
 /* Bin colors */
 /* Yellow */
 .bin.metal {
-    background: #ffff00;
+    background: #f9e547;
 }
 
 /* Blue */
@@ -258,6 +258,7 @@ hr {
         height: 90px;
     }
 }
+
 
 
 
